<resources>
    <string name="app_name">Codec2Talkie</string>
    <string name="push_to_talk">Push to talk</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="ports_category_title">TNC Settings</string>
    <string name="kiss_category_title">KISS Settings</string>
    <string name="usb_serial_num_title">USB serial port number</string>
    <string name="usb_serial_speed_title">USB serial speed</string>
    <string name="usb_bt_client_name_title">Bluetooth device</string>
    <string name="usb_bt_client_name_summary">Default Bluetooth device to connect</string>
    <string name="codec_category_title">Audio Codec Settings</string>
    <string name="codec_type_title">Select codec type</string>
    <string name="codec_type_settings_title">Codec settings</string>
    <string name="codec_type_settings_summary">Change selected codec settings, such as bit rate, frame size</string>
    <string name="codec2_category_title">Codec2 Settings</string>
    <string name="codec2_mode_title">Mode/Speed</string>
    <string name="codec2_test_mode_title">Loopback test mode</string>
    <string name="codec2_test_mode_summary">Records and plays recording without transmission</string>
    <string name="codec2_recorder_title">Enable recorder</string>
    <string name="codec2_recorder_summary">Record incoming and outgoing transmissions for future playback</string>
    <string name="opus_category_title">OPUS Settings</string>
    <string name="opus_frame_size_title">PCM frame duration [ms]</string>
    <string name="opus_bit_rate_title">Bit rate [bps]</string>
    <string name="opus_bit_rate_summary">Bit rate from 1200 up to 16000bps (practical), set PCM frame duration to 20ms for lower bit rates</string>
    <string name="opus_complexity_title">Complexity</string>
    <string name="main_status_loopback_test">Loopback</string>
    <string name="main_status_stop">STOPPED</string>
    <string name="main_status_tx">TRANSMITTING</string>
    <string name="main_status_rx">(RECEIVING)</string>
    <string name="main_status_voice_received">RECEIVING</string>
    <string name="main_status_rx_error">RECEIVING\nERROR</string>
    <string name="main_status_tx_error">TRANSMITTING\nERROR</string>
    <string name="kiss_enable_title">Enable KISS</string>
    <string name="kiss_enable_summary">Enables KISS protocol, otherwise RAW frames will be sent</string>
    <string name="kiss_basic_title">Set KISS basic parameters</string>
    <string name="kiss_basic_summary">Set CSMA and TX delay/tail parameters</string>
    <string name="kiss_basic_p_title">CSMA persistence P</string>
    <string name="kiss_basic_p_summary">Set CSMA persistence P (1–255)</string>
    <string name="kiss_basic_slot_time_title">CSMA slot time</string>
    <string name="kiss_parrot_enable_title">Enable parrot</string>
    <string name="kiss_parrot_enable_summary">Received packets will be transmitted back, digirepeated</string>
    <string name="kiss_buffered_enable_title">Enable playback buffering</string>
    <string name="kiss_buffered_enable_summary">Use when your modem data rate is less than Codec2 bitrate</string>
    <string name="kiss_extensions_enable_title">Enable extensions</string>
    <string name="kiss_extensions_enable_summary">Enable radio control and signal level reports</string>
    <string name="kiss_extensions_radio_mod_title">Select radio modulation type</string>
    <string name="kiss_extensions_radio_control_title">Set radio parameters</string>
    <string name="kiss_extensions_radio_control_summary">Set frequency, bandwidth and other radio parameters</string>
    <string name="kiss_extensions_radio_category_lora_title">Set LoRa modulation parameters</string>
    <string name="kiss_extensions_radio_category_fsk_title">Set FSK modulation parameters</string>
    <string name="kiss_extensions_radio_category_other_title">Modem control</string>
    <string name="kiss_extension_radio_split_freq_title">Split frequency operation</string>
    <string name="kiss_extension_radio_split_freq_summary">Use separate frequencies for RX and TX</string>
    <string name="kiss_extensions_radio_frequency_title">Frequency (Hz)</string>
    <string name="kiss_extensions_radio_frequency_summary">Set radio frequency for RX/TX or RX frequency when split operation is enabled</string>
    <string name="kiss_extensions_radio_frequency_title_tx">Frequency TX (Hz)</string>
    <string name="kiss_extensions_radio_frequency_summary_tx">Set transmit radio frequency</string>
    <string name="kiss_extensions_radio_bandwidth_title">Bandwidth (Hz)</string>
    <string name="kiss_extensions_radio_power_title">Power (dBm)</string>
    <string name="kiss_extensions_radio_sf_title">Spreading factor (7–12)</string>
    <string name="kiss_extensions_radio_cr_title">Coding rate (5–8)</string>
    <string name="kiss_extensions_radio_sync_title">Sync word (HEX)</string>
    <string name="kiss_extensions_radio_sync_summary">Set packet sync word as hex value</string>
    <string name="kiss_extensions_radio_crc_title">Enable CRC check</string>
    <string name="kiss_extensions_radio_crc_summary">Enable packet CRC check</string>
    <string name="kiss_extension_radio_fsk_bit_rate_title">Bit rate (600–300000 bps)</string>
    <string name="kiss_extension_radio_fsk_bit_rate_summary">Set bit rate</string>
    <string name="kiss_extension_radio_fsk_freq_dev_title">Set freq deviation (600–200000 Hz)</string>
    <string name="kiss_extension_radio_fsk_freq_dev_summary">Set freq deviation</string>
    <string name="kiss_extension_radio_fsk_rx_bw_title">Set receive bandwidth (Hz)</string>
    <string name="app_volume_ptt_title">Use volume keys for PTT</string>
    <string name="app_volume_ptt_summary">Volume up/down keys will be used for PTT</string>
    <string name="app_category_title">Application Settings</string>
    <string name="app_keep_screen_on_title">Keep screen ON</string>
    <string name="app_keep_screen_on_summary">Prevent screen switching off when app is active</string>
    <string name="menu_recorder">Recorder</string>
    <string name="menu_reconnect">Reconnect to TNC</string>
    <string name="tcp_ip_basic_address_title">IP address</string>
    <string name="tcp_ip_basic_port_title">IP port number</string>
    <string name="tcp_ip_basic_address_summary">Set server IP address to connect</string>
    <string name="tcp_ip_basic_port_summary">Set server port number</string>
    <string name="tcp_ip_basic_retry_count_title">Connect retry count</string>
    <string name="tcp_ip_basic_retry_count_summary">Try to connect number of times when connecting for the first time or when connection is lost</string>
    <string name="tcp_ip_basic_retry_delay_title">Connect retry delay</string>
    <string name="tcp_ip_basic_retry_delay_summary">How many milliseconds to wait before trying to connect again</string>
    <string name="kiss_extension_reboot_title">Reboot modem</string>
    <string name="kiss_extension_reboot_summary">Click to send reboot command to the modem</string>
    <string name="codec2_tx_frame_max_size_title">Maximum super frame size (bytes)</string>
    <string name="codec2_tx_frame_max_size_summary">Multiple Codec2 encoded samples are aggregated into super frame not larger than this value</string>
    <string name="tnc_extended_uart_title">UART modem prefix</string>
    <string name="custom_prefix_enabled_title">Enable UART modem TX prefix</string>
    <string name="custom_prefix_enabled_summary">Prefix data with the HEX string, used in fixed transmission mode by some UART modems to specify transmission target</string>
    <string name="custom_prefix_title">Packet prefix value as a HEX string</string>
    <string name="custom_prefix_summary">Prefix content as a HEX string, e.g. C0FFEE</string>
    <string name="aprs_location_source_title">Location source</string>
    <string name="aprs_location_source_gps_title">Periodic GPS position</string>
    <string name="aprs_location_source_manual_title">Manual position</string>
    <string name="aprs_location_source_gps_update_time_title">Minimum update time</string>
    <string name="aprs_location_source_gps_update_time_summary">Minutes between beacon transmissions</string>
    <string name="aprs_location_source_gps_update_distance_title">Minimum update distance</string>
    <string name="aprs_location_source_gps_update_distance_summary">Kilometers before beacon transmission (set to 0 for time only)</string>
    <string name="aprs_location_source_manual_lat_title">Latitude</string>
    <string name="aprs_location_source_manual_lat_summary">Latitude coordinate</string>
    <string name="aprs_location_source_manual_lon_title">Longitude</string>
    <string name="aprs_location_source_manual_lon_summary">Longitude coordinate</string>
    <string name="aprs_location_source_manual_auto_send_title">Automatic posting</string>
    <string name="aprs_location_source_manual_auto_send_summary">Perform periodic position posting</string>
    <string name="aprs_location_source_manual_update_time_title">Minimum update time</string>
    <string name="aprs_location_source_manual_update_time_summary">Minutes between beacon transmissions</string>
    <string name="aprs_privacy_position_ambiguity_title">Position ambiguity</string>
    <string name="aprs_privacy_speed_title">Send speed &amp; bearing</string>
    <string name="aprs_privacy_speed_summary">Include speed and bearing in position reports</string>
    <string name="aprs_privacy_altitude_title">Send altitude</string>
    <string name="aprs_privacy_altitude_summary">Include altitude in position reports</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_start_tracking">Start tracking</string>
    <string name="menu_send_position">Send position</string>
    <string name="menu_aprs_log">View log</string>
    <string name="log_view_menu_stations">View stations</string>
    <string name="ports_sound_modem_preamble_title">Frame sync prefix</string>
    <string name="ports_sound_modem_preamble_summary">No-op preamble (e.g. for VOX control) in milliseconds</string>
    <string name="ports_sound_modem_type_title">Modem modulation type</string>
    <string name="aprs_is_code_title">APRS-IS passcode</string>
    <string name="aprs_is_code_summary">APRS-IS validation passcode</string>
    <string name="aprs_is_title">Internet APRS-IS</string>
    <string name="aprs_is_tcpip_server_title">Server</string>
    <string name="aprs_is_tcpip_server_summary">APRS-IS TCP server to connect</string>
    <string name="aprs_is_enable_rx_gate_title">Enable APRS-IS RX gate</string>
    <string name="aprs_is_enable_tx_gate_title">Enable APRS-IS TX gate</string>
    <string name="aprs_is_enable_rx_gate_summary">Radio packets will be forwarded to APRS-IS</string>
    <string name="aprs_is_enable_tx_gate_summary">APRS-IS packets will be forwarded to radio</string>
    <string name="aprs_is_radius_title">Neighbour radius</string>
    <string name="aprs_is_radius_summary">Receive APRS-IS packets from stations in this radius (km) from my last  position known by the server, set to 0 to disable</string>
    <string name="aprs_is_filter_title">Packet filter</string>
    <string name="aprs_is_filter_summary">Filter for incoming APRS-IS packets, https://www.aprs-is.net/javAPRSFilter.aspx</string>
    <string name="aprs_is_enable_self_title">Enable own APRS to APRS-IS</string>
    <string name="aprs_is_enable_self_summary">Send own APRS data to APRS-IS in addition to currently selected transport</string>
    <string name="log_view_menu_clear_title">Clear log</string>
    <string name="log_view_menu_clear_1h">Older than 1 hour</string>
    <string name="log_view_menu_clear_12h">Older than 12 hours</string>
    <string name="log_view_menu_clear_1d">Older than 1 day</string>
    <string name="log_view_menu_clear_7d">Older than 7 days</string>
    <string name="log_view_menu_clear_all">Clear all</string>
</resources>