<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="app_category"
        app:title="@string/app_category_title">

        <SwitchPreference
            app:key="app_volume_ptt"
            app:title="@string/app_volume_ptt_title"
            app:summary="@string/app_volume_ptt_summary"
            app:defaultValue="false">
        </SwitchPreference>

        <SwitchPreference
            app:key="app_keep_screen_on"
            app:title="@string/app_keep_screen_on_title"
            app:summary="@string/app_keep_screen_on_summary"
            app:defaultValue="false">
        </SwitchPreference>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="codec2_category"
        app:title="@string/codec2_category_title">

        <ListPreference
            app:key="codec2_mode"
            app:title="@string/codec2_mode_title"
            app:entries="@array/codec2_modes"
            app:entryValues="@array/codec2_modes"
            app:defaultValue="MODE_450=10"
            app:summary="%s">
        </ListPreference>

        <SwitchPreference
            app:key="codec2_test_mode"
            app:title="@string/codec2_test_mode_title"
            app:summary="@string/codec2_test_mode_summary"
            app:defaultValue="false">
        </SwitchPreference>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="ports_category"
        app:title="@string/ports_category_title">

        <Preference
            app:key="ports_bt_client_name"
            app:title="@string/usb_bt_client_name_title"
            app:summary="@string/usb_bt_client_name_summary">
            <intent
                android:targetPackage="com.radio.codec2talkie"
                android:targetClass="com.radio.codec2talkie.settings.BluetoothSettingsActivity">
            </intent>
        </Preference>

        <ListPreference
            app:key="ports_usb_serial_speed"
            app:title="@string/usb_serial_speed_title"
            app:entries="@array/usb_serial_speed"
            app:entryValues="@array/usb_serial_speed"
            app:defaultValue="115200"
            app:summary="%s">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="kiss_category"
        app:title="@string/kiss_category_title">

        <SwitchPreference
            app:key="kiss_enable"
            app:title="@string/kiss_enable_title"
            app:summary="@string/kiss_enable_summary"
            app:defaultValue="true">
        </SwitchPreference>

        <SwitchPreference
            app:key="kiss_buffered_enable"
            app:title="@string/kiss_buffered_enable_title"
            app:summary="@string/kiss_buffered_enable_summary"
            app:dependency="kiss_enable"
            app:defaultValue="false">
        </SwitchPreference>

        <SwitchPreference
            app:key="kiss_parrot_enable"
            app:title="@string/kiss_parrot_enable_title"
            app:summary="@string/kiss_parrot_enable_summary"
            app:dependency="kiss_enable"
            app:defaultValue="false">
        </SwitchPreference>

        <SwitchPreference
            app:key="kiss_extensions_enable"
            app:title="@string/kiss_extensions_enable_title"
            app:summary="@string/kiss_extensions_enable_summary"
            app:dependency="kiss_enable"
            app:defaultValue="false">
        </SwitchPreference>

        <Preference
            android:key="pref_radio_control"
            android:title="@string/kiss_extensions_radio_control_title"
            android:summary="@string/kiss_extensions_radio_control_summary"
            app:fragment="com.radio.codec2talkie.settings.SettingsActivity$SettingsRadioFragment"
            app:dependency="kiss_extensions_enable">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>