<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="ports_tcp_ip_category"
        app:title="@string/kiss_basic_title">

    <EditTextPreference
        app:key="ports_tcp_ip_address"
        app:title="@string/tcp_ip_basic_address_title"
        app:summary="@string/tcp_ip_basic_address_summary"
        app:defaultValue="127.0.0.1">
    </EditTextPreference>

    <EditTextPreference
        app:key="ports_tcp_ip_port"
        app:title="@string/tcp_ip_basic_port_title"
        app:summary="@string/tcp_ip_basic_port_summary"
        app:defaultValue="8001">
    </EditTextPreference>

    <EditTextPreference
        app:key="ports_tcp_ip_retry_count"
        app:title="@string/tcp_ip_basic_retry_count_title"
        app:summary="@string/tcp_ip_basic_retry_count_summary"
        app:defaultValue="5">
    </EditTextPreference>

    <EditTextPreference
        app:key="ports_tcp_ip_retry_delay"
        app:title="@string/tcp_ip_basic_retry_delay_title"
        app:summary="@string/tcp_ip_basic_retry_delay_summary"
        app:defaultValue="5000">
    </EditTextPreference>

    </PreferenceCategory>
</PreferenceScreen>