<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="tnc_extended_uart"
        app:title="@string/tnc_extended_uart_title">

        <CheckBoxPreference
            app:key="custom_prefix_enabled"
            app:title="@string/custom_prefix_enabled_title"
            app:summary="@string/custom_prefix_enabled_summary"
            app:defaultValue="false">
        </CheckBoxPreference>

        <EditTextPreference
            app:key="custom_prefix"
            app:title="@string/custom_prefix_title"
            app:summary = "@string/custom_prefix_summary"
            app:dependency="custom_prefix_enabled"
            app:defaultValue="C0FFEE">
        </EditTextPreference>

    </PreferenceCategory>
</PreferenceScreen>